# dprodimplementation

./: .dockerignore  .env.example  .gitignore  .vercelignore  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  main.py  pyproject.toml  render.yaml  requirements.txt  vercel.json
.claude/docs/: plan.md  requirements.md  spec.md
.github/workflows/: deploy.yml  validate.yml
api/: index.py
config/: custom-shapes.ttl  dprod-repo-config.ttl
data/products/: customer-360.ttl  finance-reporting.ttl  hr-workforce.ttl  marketing-campaigns.ttl  order-management.ttl  sales-analytics.ttl
data/vocab/: agents.ttl  domains.ttl  lifecycle-status.ttl  protocols.ttl  security-types.ttl
docs/: deployment.md  governance.md  onboarding.md  slo.md
docs/api/: graph-store.md  rest-patterns.md  sparql-endpoints.md
frontend/: .dockerignore  .gitignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
monitoring/: alerts.yml  prometheus.yml
ontologies/: README.md
postman/: dprod-api.postman_collection.json  dprod-environment.postman_environment.json
queries/: find-by-domain.rq  find-by-owner.rq  find-by-status.rq  get-product.rq  lineage-downstream.rq  lineage-full.rq  lineage-upstream.rq  list-products.rq  missing-descriptions.rq  missing-owners.rq  orphaned-datasets.rq  products-without-ports.rq  recent-changes.rq  search.rq  stale-products.rq  stats-by-domain.rq  stats-by-owner.rq  stats-by-status.rq  validate-count.rq  validate-product.rq
scripts/: hetzner-setup.sh
tests/: test_client.py
(+50 files in other folders)
